<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.matenek.tourdetimor.MainActivity"
    android:background="#ffffff"
    android:touchscreenBlocksFocus="false">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tourdetimorlogo"
        android:src="@drawable/tourdetimor"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_emergency_sms"
        android:id="@+id/smscall"
        android:onClick="GoToSmsCall"
        android:background="@color/colorPrimary"
        android:textColor="@color/foreground_material_dark"
        android:textSize="20sp"
        android:layout_below="@+id/welcome"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp"
        android:layout_alignEnd="@+id/tagline" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/tagline"
        android:id="@+id/tagline"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/tourdetimorlogo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/welcome"
        android:id="@+id/welcome"
        android:textAlignment="center"
        android:textSize="16dp"
        android:layout_below="@+id/tagline"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_maps"
        android:id="@+id/viewmaps"
        android:layout_below="@+id/smscall"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@color/foreground_material_dark"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:onClick="GoToMapsHome"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_the_schedule"
        android:id="@+id/schedule"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@color/foreground_material_dark"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:layout_alignTop="@+id/viewmaps"
        android:layout_alignEnd="@+id/smscall"
        android:onClick="GoToSchedule"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prizes"
        android:id="@+id/prizes"
        android:layout_marginTop="34dp"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@color/foreground_material_dark"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:layout_below="@+id/schedule"
        android:layout_alignEnd="@+id/schedule"
        android:onClick="GoToPrizes"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faq"
        android:id="@+id/faq"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@color/foreground_material_dark"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:layout_alignTop="@+id/prizes"
        android:layout_alignParentStart="true"
        android:onClick="GoToFAQ"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="#000000"
        android:layout_above="@+id/credits"
        android:layout_alignParentEnd="true"
        android:id="@+id/view" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/credits"
        android:id="@+id/credits"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/faq"
        android:clickable="true"
        android:autoLink="web"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_below="@+id/view"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/credits"
        android:layout_alignEnd="@+id/faq"
        android:src="@drawable/timorlodgelogo" />

</RelativeLayout>
