<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.matenek.tourdetimor.SmsCall">

    <android.support.v7.widget.Toolbar android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextColor="@color/colorWhite"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_alignParentEnd="true" />


    <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Send Emergency SMS"
        android:textSize="30dp"
        android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/my_toolbar"
        android:layout_centerHorizontal="true" />

    <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sms_hint"
            android:textColor="#040404"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:paddingTop="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:inputType="phone"
            android:text="@string/emergency_contacts"
            android:textColorHint="@color/abc_primary_text_material_dark"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/textView2" />

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:layout_below="@+id/editText"
            android:textColorHint="@color/abc_primary_text_material_dark"
            android:hint="Enter SMS"
            android:inputType="textMultiLine"
            android:ems="10"
            android:layout_alignStart="@+id/textView1"
            android:layout_alignEnd="@+id/textView2"
            android:text="@string/urgenthelp" />

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Send Sms"
            android:id="@+id/btnSendSMS"
            android:layout_below="@+id/editText2"
            android:layout_alignStart="@+id/editText" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Make Emergency Calls"
        android:textSize="30dp"
        android:layout_below="@+id/btnSendSMS"
        android:layout_alignEnd="@+id/textView1"
        android:layout_marginTop="56dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_hint"
        android:textColor="#040404"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textAlignment="center"
        android:layout_alignRight="@+id/textView"
        android:layout_below="@+id/textView" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phoneone"
        android:autoLink="phone"
        android:textColor="#040404"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textAlignment="center"
        android:layout_below="@+id/textView3"
        android:layout_alignStart="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phonetwo"
        android:autoLink="phone"
        android:textColor="#040404"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textAlignment="center"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phonemedical"
        android:autoLink="phone"
        android:textColor="#040404"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textAlignment="center"
        android:layout_below="@+id/phone"
        android:layout_alignStart="@+id/textView3" />


</RelativeLayout>
